; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_mmap_ro.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_mmap_ro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_PROT_READ = common dso_local global i32 0, align 4
@GIT_MAP_SHARED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_futils_mmap_ro(i32* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i32, i32* @GIT_PROT_READ, align 4
  %12 = load i32, i32* @GIT_MAP_SHARED, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @p_mmap(i32* %9, i64 %10, i32 %11, i32 %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @p_mmap(i32*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
